--- a/Gestionale-Proyect/src/components/TimeClock.css
+++ b/Gestionale-Proyect/src/components/TimeClock.css
@@ -80,7 +80,7 @@
 
 .popup {
   position: fixed;
-  top: 40%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #007bff;
@@ -89,4 +89,17 @@
   border-radius: 4px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+  animation: fadeOut 1.5s forwards;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
 }
