--- a/Gestionale-Proyect/src/components/DashboardSupervisor.css
+++ b/Gestionale-Proyect/src/components/DashboardSupervisor.css
@@ -159,6 +159,15 @@
   transition: background-color 0.3s, color 0.3s;
 }
 
+.statistics,
+.user-list,
+.on-duty-workers {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 .footer {
   background-color: #007bff;
   color: white;
