--- a/Gestionale-Proyect/src/components/DashboardSupervisor.css
+++ b/Gestionale-Proyect/src/components/DashboardSupervisor.css
@@ -1,4 +1,3 @@
-/* Codice esistente */
 .dashboard-wrapper {
   display: flex;
   flex-direction: column;
@@ -102,11 +101,11 @@
 .user-list,
 .on-duty-workers,
 .history {
-  background-color: white; /* Sfondo bianco */
-  padding: 20px; /* Padding */
-  border-radius: 8px; /* Bordi arrotondati */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombra */
-  border: 1px solid #ddd; /* Bordo per definire i contenitori */
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
 }
 
 .statistics h2,
@@ -138,23 +137,6 @@
 
 .card {
   margin-top: 20px;
-}
-
-.hours-edit {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.hours-edit button {
-  margin-left: 10px;
-  padding: 5px 10px;
-  border: 1px solid #007bff;
-  background-color: white;
-  color: #007bff;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
 }
 
 .footer {
