--- a/Gestionale-Proyect/src/components/PaySlip.css
+++ b/Gestionale-Proyect/src/components/PaySlip.css
@@ -1,15 +1,17 @@
 .pay-slip {
-  background-color: white;
   padding: 20px;
   border-radius: 8px;
+  background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .pay-slip-item {
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
+  margin-bottom: 20px;
 }
 
-.pay-slip-item:last-child {
-  border-bottom: none;
+.pay-slip-item hr {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 0;
+  border-top: 1px solid #ccc;
 }
