--- a/Gestionale-Proyect/src/components/PaySlip.css
+++ b/Gestionale-Proyect/src/components/PaySlip.css
@@ -1,17 +1,15 @@
 .pay-slip {
+  background-color: white;
   padding: 20px;
   border-radius: 8px;
-  background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .pay-slip-item {
-  margin-bottom: 20px;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
 }
 
-.pay-slip-item hr {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border: 0;
-  border-top: 1px solid #ccc;
+.pay-slip-item:last-child {
+  border-bottom: none;
 }
